# random-quote-generator

./: .flake8  README.md  pyproject.toml
.github/workflows/: branch.yaml  release.yaml
docs/: conf.py  index.rst
